# Backend-LLMTestHelper

./: .dockerignore  .env.dist  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
app/: main.py  middlewares.py  settings.py
app/api/v1/routes/: auth.py  document.py  tests.py  users.py
app/controllers/: auth.py  tests.py  users.py
app/database/: mongodb_config.py  postgres_config.py
app/database/models/orm/: document.py  document_embedding.py  mixin.py  refresh_token.py  test.py  test_run.py  user.py
app/llm/: llm_config.py  llm_test_solver.py  try.py
app/models/: User.py
app/models/ORM/: RefreshToken.py  User.py
app/models/orm/: mixin.py  refresh_token.py  test.py  test_run.py  user.py
app/parsers/: google.py  google_form.py
app/schemas/: Token.py  TokenResponse.py  User.py  llm.py  test.py  user.py  users.py
app/schemas/tests/: document.py  test.py
app/services/: jwt_tokens_handlers.py  tests.py  user_auth.py  users.py  utils.py
app/services/llm/: embeddings.py  llm_config.py  llm_test_solver.py
app/services/tests/: documents.py  tests.py
app/tests/: conftest.py  test_answer_selection.py  test_controllers.py  test_controllers_auth.py  test_endpoints.py  test_llm_solver.py  test_parsing_logic.py  test_schemas.py
app/utils/: configs.py  enums.py  exception_handlers.py  exception_types.py  jwt_tokens_handlers.py  logging.py
migrations/: env.py
migrations/versions/: 2025_10_25_00_31_first_migration.py  2025_10_27_17_37_created_user_model.py  2025_10_28_00_42_created_refresh_token_model.py  2025_10_28_00_46_updated_models_timezones.py  2025_10_29_13_54_added_test_table.py  2025_11_03_17_35_added_url_column_to_the_test.py  2025_11_03_21_42_added_testrun_model_changed_test_model.py  2025_11_27_13_22_added_job_id_for_the_test_run.py  2025_11_29_17_59_added_model_of_document_and_document_.py
tests/: conftest.py
tests/integration/: test_auth_api.py  test_tests_api.py  test_users_api.py
tests/unit/: test_controllers_auth.py  test_services_tests.py  test_services_users.py
