[project]
name = "llmtesthelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "beanie>=2.0.0",
    "black>=25.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "generativeai>=0.0.1",
    "langchain-google-genai>=3.0.0",
    "motor>=3.7.1",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.11.0",
    "pylint>=4.0.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
