[project]
name = "llmtesthelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "alembic>=1.17.0",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "beanie>=2.0.0",
    "black>=25.9.0",
    "contextvars>=2.4",
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "generativeai>=0.0.1",
    "jwt>=1.4.0",
    "langchain-google-genai>=3.0.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "passlib>=1.7.4",
    "pdfplumber>=0.11.8",
    "pgvector>=0.4.1",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.3",
    "pylint>=4.0.2",
    "python-jose>=3.5.0",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
